set overflow for name, fix z-index

--- a/src/app/core/components/nav/nav.component.scss
+++ b/src/app/core/components/nav/nav.component.scss
@@ -7,7 +7,7 @@
   top: 0;
   left: 0;
   right: 0;
-  z-index: 2;
+  z-index: $z-index-nav;
   background-color: $white;
   box-shadow: $box-shadow-sm;
 
@@ -17,6 +17,10 @@
 
     // background-color: $gray-700;
   }
+}
+
+.global-search-active :host {
+  z-index: $z-index-nav + 1;
 }
 
 nav.navbar {
