--- a/src/app/file-browser/components/file-viewer/file-viewer.component.scss
+++ b/src/app/file-browser/components/file-viewer/file-viewer.component.scss
@@ -9,7 +9,7 @@ $button-size: 2rem;
   bottom: 0;
   left: 0;
   right: 0;
-  z-index: 1;
+  z-index: 10;
   display: block;
 
   @include until($tablet-horizontal) {
