--- a/src/app/public/components/search-box/search-box.component.scss
+++ b/src/app/public/components/search-box/search-box.component.scss
@@ -16,6 +16,8 @@ $min-input-width: 18rem;
   display: flex;
   align-items: center;
   margin-left: auto;
+  position: fixed;
+  z-index: 10;
 }
 
 form {
