--- a/src/app/search/components/global-search-bar/global-search-bar.component.scss
+++ b/src/app/search/components/global-search-bar/global-search-bar.component.scss
@@ -106,12 +106,20 @@ $result-padding-y: 0.25rem;
     cursor: pointer;
     padding: $result-padding-y * 2 $result-padding-x;
 
-    &:hover, &.selected {
+    &:hover:not(.empty), &.selected {
       background-color: darken($PR-orange, $darken-percent);
+    }
+
+    &.empty {
+      cursor: initial;
     }
 
     .name {
       flex: 1 1 auto;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+      margin-right: $result-padding-x;
     }
 
     .type {
@@ -119,11 +127,6 @@ $result-padding-y: 0.25rem;
       flex: 0 1 auto;
       font-size: $font-size-sm;
     }
-  }
-
-  .empty {
-    // font-size: $font-size-sm;
-    // font-weight: 700;
   }
 }
 
